# rvllm

./: Cargo.toml  PLAN_rtriton.md  POSTMORTEM_rtriton.md  README.md  qwen.txt  x-post.txt
.github/workflows/: ci.yml
bench/: bench_cutlass.sh  bench_fp8_gemv.cu  bench_jit.sh  bench_long_context.sh  verify_fusion.sh
crates/rtriton/: Cargo.toml
crates/rtriton/src/: autotune.rs  builder.rs  codegen.rs  cublas_gemm.rs  graph.rs  ir.rs  lib.rs  passes.rs  runtime.rs
crates/rtriton/src/kernels/: fused_attention.rs  gemm.rs  gemm_dispatch.rs  mod.rs  rmsnorm.rs  rope.rs  silu_mul.rs
crates/rtriton/tests/: e2e_pipeline.rs
crates/rvllm-attention/src/: backend.rs  lib.rs
crates/rvllm-engine/src/: gpu_engine.rs
crates/rvllm-fusion/examples/: gen_ptx.rs
crates/rvllm-gpu/: build.rs
crates/rvllm-gpu/src/: cublas.rs  cublaslt_ops.rs  kernel_loader.rs
crates/rvllm-model-loader/src/: gpu_loader.rs  gpu_weights.rs
crates/rvllm-model-runner/src/: gpu_layer.rs  gpu_runner.rs  (+1 more)
crates/rvllm-sampling/: Cargo.toml
deploy/: benchmark_client.py  deploy_and_bench.sh  vllm_direct_bench.py
docs/: arch.md  benchmark-history.md  index.html  next-steps-implementation.md  optimization-roadmap.md  swarm-kernel-fusion.md  update-log.md
docs/delegation/: stream-race-fix.md
docs/paper/: rvllm-body.tex  rvllm-bw.tex  rvllm.tex
kernels/: bench_triton_vs_cublas.py  build.sh  compile_triton_matmul.py  flash_attention_3.cu  flash_attention_3_prefill.cu  fp8_gemv.cu  fused_add_norm_gateup_gemv.cu  fused_add_norm_qkv_gemv.cu  fused_silu_down_gemv.cu  persistent_layer_decode.cu
(+17 files in other folders)
